k8s/nexia-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextstep
